--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gd"
   ],
   "author": "https://github.com/shizuketsu/",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/shizuketsu/YargoGDPSBot/issues"
   },
